--- a/app/globals.css
+++ b/app/globals.css
@@ -18,4 +18,6 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+
+  /* .CustomSize {font-size: 40px;} */
 }
